# Kernel-Bridge

./: .gitignore  CMakeLists.txt  MakeBundle.bat  x32-debug.ddf  x32-release.ddf  x64-debug.ddf  x64-release.ddf
Kernel-Bridge/: Kernel-Bridge.cpp  Kernel-Bridge.inf  Kernel-Bridge.rc  Kernel-Bridge.vcxproj  Kernel-Bridge.vcxproj.filters  imports.h
Kernel-Bridge/Kernel-Bridge/: FilterCallbacks.cpp  IOCTLHandlers.cpp
Kernel-Tests/: Main.cpp
SharedTypes/: CtlTypes.h
User-Bridge/API/: CommPort.cpp  CommPort.h  Flt-Bridge.h  User-Bridge.cpp  User-Bridge.h
User-Bridge/API/PEUtils/: PEAnalyzer.h
